<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShoppingDiary</string>
    <string name="product_name_hint">Enter product name</string>
    <string name="product_name_label">Product</string>
    <string name="product_comment_label">Comment</string>
    <string name="product_details_label">Details</string>
    <string name="product_purchased_label">Purchased?</string>
    <string name="date_picker_title">Date of purchase:</string>
    <string name="products_title">Products List</string>
    <string name="new_product">New Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="take">*</string>
    <string name="addProductBtn">Add</string>
    <string name="product_comment">Enter comment or description</string>
    <string name="scanner">Bar Code</string>


</resources>
